fix: reduce profile bio edit textarea to prevent overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -843,7 +843,7 @@ svg {
 
   .biodiv textarea {
     min-width: 250px;
-    min-height: 20vh;
+    min-height: 10vh;
   }
   .chatdeletediv button {
     height: 50px;
